# needlings

./: .gitignore  README.md  needlings.code-workspace  pyproject.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  curriculum.yml  nightly.yml
exercises/01-setup/: index.toml
exercises/01-setup/01-hello-need/: info.toml
exercises/01-setup/02-id-required/: info.toml
exercises/01-setup/03-need-title-and-content/: info.toml
exercises/01-setup/04-first-build-warning/: info.toml
exercises/01-setup/05-multiple-needs/: info.toml
exercises/02-need-types/: index.toml
exercises/02-need-types/01-custom-type/: info.toml
exercises/02-need-types/02-status-field/: info.toml
exercises/02-need-types/03-tags-field/: info.toml
exercises/02-need-types/04-custom-field-string/: info.toml
exercises/_base/: conf.py  index.rst  ubproject.toml
src/needlings/: __init__.py  catalog.py  cli.py  compose.py  models.py  paths.py  render.py  sentinel.py  state.py  ubc_install.py  verify.py  watch.py
tests/integration/: test_chapter1_e2e.py  test_verify_all.py
tests/unit/: test_assertion_backend.py  test_assertions.py  test_backends_base.py  test_catalog.py  test_cli_doctor.py  test_cli_hint_reset.py  test_cli_init.py  test_cli_list.py  test_cli_new_exercise.py  test_cli_progress.py  test_cli_run.py  test_compose.py  test_models.py  test_paths.py  test_render.py  test_sentinel.py  test_sphinx_backend.py  test_state.py  test_ubc_backend.py  test_ubc_install.py  test_verify.py  test_watch.py
(+53 files in other folders)
