[project]
name = "needlings"
version = "0.1.0"
description = "Interactive sphinx-needs 8.0 exercises, rustlings-style."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "needlings contributors" }]
dependencies = [
    "click>=8.1,<9",
    "rich>=13.7,<15",
    "watchfiles>=0.21,<2",
    "sphinx>=7.2,<9",
    "sphinx-needs>=8.0,<9",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
needlings = "needlings.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/needlings"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: slow tests that invoke sphinx-build and ubc",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
